test spacing fix on iphones

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -50,7 +50,6 @@
   margin: 0 auto;
   padding: 0px 10px;
   box-sizing: border-box;
-  max-width: 100vw;
   overflow-x: hidden;
   gap: 20px; /* Important: add gap to control spacing properly */
 }
@@ -137,6 +136,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: fit-content;
+    width: fit-content;
     gap: 15px;
     padding: 0px 10px;
   }
@@ -146,7 +147,6 @@
     max-width: 400px;
     padding: 20px 15px;
     height: auto;
-    min-height: unset;
   }
 
   .uniqueGridCell {
